test: fix ShowPlanningViewTest and resolve NullPointerExceptions in ShowPlanningView